--- a/Splitter/app.config
+++ b/Splitter/app.config
@@ -4,6 +4,8 @@
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
             <section name="Fizzi.Applications.Splitter.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
+
+        <section name="displayTemplates" type="Fizzi.Applications.Splitter.Model.DisplayTemplatesConfigurationSection, Splitter" allowExeDefinition="MachineToLocalUser" />
     </configSections>
     <userSettings>
         <Fizzi.Applications.Splitter.Properties.Settings>
@@ -18,4 +20,15 @@
             </setting>
         </Fizzi.Applications.Splitter.Properties.Settings>
     </userSettings>
+
+    <displayTemplates>
+      <available>
+        <add TemplateId="dcc5de7d-e204-475f-826e-6edb0d76492f" TemplateName="&lt;Default&gt;"
+                WindowWidth="250" WindowHeight="400">
+          <MainFont Family="Calibri" Size="14" />
+          <HeaderFont Family="Calibri" Size="14" />
+          <TimerFont Size="40" Family="Calibri" />
+        </add>
+      </available>
+    </displayTemplates>
 </configuration>
