--- a/FontDialog/FontDialog.csproj
+++ b/FontDialog/FontDialog.csproj
@@ -33,6 +33,7 @@
   <ItemGroup>
     <Reference Include="PresentationCore" />
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml.Linq" />
@@ -44,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Common\NotifyPropertyChangedEx.cs" />
     <Compile Include="FontDefinition.cs" />
+    <Compile Include="Old_FontDefinition.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup />
