--- a/Splitter/Properties/Settings.settings
+++ b/Splitter/Properties/Settings.settings
@@ -24,7 +24,10 @@
       <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="AllowsTransparency" Type="System.Boolean" Scope="User">
-      <Value Profile="(Default)">True</Value>
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="ConfigPath" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
     </Setting>
   </Settings>
 </SettingsFile>
