--- a/Splitter/app.config
+++ b/Splitter/app.config
@@ -16,7 +16,10 @@
                 <value>True</value>
             </setting>
             <setting name="AllowsTransparency" serializeAs="String">
-                <value>True</value>
+                <value>False</value>
+            </setting>
+            <setting name="ConfigPath" serializeAs="String">
+                <value />
             </setting>
         </Fizzi.Applications.Splitter.Properties.Settings>
     </userSettings>
