--- a/Splitter/Properties/Settings.settings
+++ b/Splitter/Properties/Settings.settings
@@ -29,5 +29,8 @@
     <Setting Name="ConfigPath" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="MsDecimalCount" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">2</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
