--- a/Splitter/app.config
+++ b/Splitter/app.config
@@ -21,6 +21,9 @@
             <setting name="ConfigPath" serializeAs="String">
                 <value />
             </setting>
+            <setting name="MsDecimalCount" serializeAs="String">
+                <value>2</value>
+            </setting>
         </Fizzi.Applications.Splitter.Properties.Settings>
     </userSettings>
 
