--- a/Splitter/app.config
+++ b/Splitter/app.config
@@ -12,9 +12,6 @@
             <setting name="IsNewVersion" serializeAs="String">
                 <value>True</value>
             </setting>
-            <setting name="IsVeryFirstLoad" serializeAs="String">
-                <value>True</value>
-            </setting>
             <setting name="AllowsTransparency" serializeAs="String">
                 <value>False</value>
             </setting>
@@ -23,6 +20,9 @@
             </setting>
             <setting name="MsDecimalCount" serializeAs="String">
                 <value>2</value>
+            </setting>
+            <setting name="HotkeyCooldownTime" serializeAs="String">
+                <value>200</value>
             </setting>
         </Fizzi.Applications.Splitter.Properties.Settings>
     </userSettings>
