--- a/Splitter/Splitter.csproj
+++ b/Splitter/Splitter.csproj
@@ -125,6 +125,7 @@
     </ApplicationDefinition>
     <Compile Include="Common\ExceptionEx.cs" />
     <Compile Include="Common\Notifiable.cs" />
+    <Compile Include="Common\ObservableEx.cs" />
     <Compile Include="Model\DisplayPanelTemplate.cs" />
     <Compile Include="Model\DisplaySettings.cs" />
     <Compile Include="Model\DisplayTemplate.cs" />
@@ -168,7 +169,6 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Common\Command.cs" />
-    <Compile Include="Common\KeyboardListener.cs" />
     <Compile Include="Common\NotifyPropertyChangedEx.cs" />
     <Compile Include="Model\Run.cs" />
     <Compile Include="Model\Split.cs" />
@@ -219,6 +219,10 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\BondTech.HotKeyManagement.WPF.4\BondTech.HotKeyManagement.WPF.4.csproj">
+      <Project>{C78F31C0-EC07-4194-90D4-9CB771AD41A1}</Project>
+      <Name>BondTech.HotKeyManagement.WPF.4</Name>
+    </ProjectReference>
     <ProjectReference Include="..\FontDialog\FontDialog.csproj">
       <Project>{889D6549-F143-46B8-8894-504F017467D7}</Project>
       <Name>FontDialog</Name>
