--- a/Splitter/app.config
+++ b/Splitter/app.config
@@ -5,7 +5,8 @@
             <section name="Fizzi.Applications.Splitter.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
 
-        <section name="displayTemplates" type="Fizzi.Applications.Splitter.Model.DisplayTemplatesConfigurationSection, Splitter" allowExeDefinition="MachineToLocalUser" />
+        <section name="displayTemplates" type="Fizzi.Applications.Splitter.Model.DisplayTemplatesConfigurationSection, BananaSplits" allowExeDefinition="MachineToLocalUser" />
+        <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
     </configSections>
     <userSettings>
         <Fizzi.Applications.Splitter.Properties.Settings>
@@ -35,6 +36,31 @@
           <HeaderFont Family="Calibri" Size="14" />
           <TimerFont Size="40" Family="Calibri" />
         </add>
+        <add TemplateId="f55d9b5e-1a1e-4d86-8ac0-a6a01da0a07b" TemplateName="Pastel" WindowWidth="211" WindowHeight="320" TimerColor="WhiteSmoke">
+          <MainFont Family="Calibri" Size="14" />
+          <HeaderFont Family="Calibri" Size="14" />
+          <TimerFont Size="40" Family="Calibri" />
+          <DefaultPanel BorderCornerRadius="0" BorderThickness="0" BackgroundColor="WhiteSmoke" BorderColor="WhiteSmoke" TextColor="Black" />
+          <CurrentSplitPanel BorderCornerRadius="0" BorderThickness="0" BackgroundColor="SkyBlue" BorderColor="SkyBlue" TextColor="Black" />
+          <HeaderPanel BorderCornerRadius="0" BorderThickness="0" BackgroundColor="WhiteSmoke" BorderColor="WhiteSmoke" TextColor="Black" />
+          <GoldPanel BorderColor="#FFD750" BorderCornerRadius="0" BorderThickness="2" BackgroundColor="#FFD750" TextColor="Black" />
+          <AheadPanel BorderColor="#50FF50" BorderCornerRadius="0" BorderThickness="2" BackgroundColor="#50FF50" TextColor="Black" />
+          <BehindPanel BorderColor="#FF5050" BorderCornerRadius="0" BorderThickness="2" BackgroundColor="#FF5050" TextColor="Black" />
+        </add>
       </available>
     </displayTemplates>
+
+  <log4net>
+    <appender name="FileAppender" type="log4net.Appender.FileAppender">
+      <file value="bananasplits-log.txt" />
+      <appendToFile value="true" />
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date [%thread] %-5level %logger [%property{NDC}] - %message%newline" />
+      </layout>
+    </appender>
+    <root>
+      <level value="INFO" />
+      <appender-ref ref="FileAppender" />
+    </root>
+  </log4net>
 </configuration>
