--- a/Splitter/app.config
+++ b/Splitter/app.config
@@ -52,7 +52,7 @@
 
   <log4net>
     <appender name="FileAppender" type="log4net.Appender.FileAppender">
-      <file value="bananasplits-log.txt" />
+      <file type="log4net.Util.PatternString" value="%envFolderPath{MyDocuments}\BananaSplits\log.txt" />
       <appendToFile value="true" />
       <layout type="log4net.Layout.PatternLayout">
         <conversionPattern value="%date [%thread] %-5level %logger [%property{NDC}] - %message%newline" />
